Applied cleaned up patch originally by Ziusudra as part of ticket #3473: * Changed the session module to create an extra session for existing audio   tracks. * Let cdda also recognize "audio partitions" as published by the session module. * If there is only a single session, the session module now gives file system   drivers the chance to play with the device directly.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41288 a95241bf-73f2-0310-859d-f6bbb57e9c96